refactor: create a custom CLI wrapper around Miniflare API
This allows us to tightly control the options that are passed to Miniflare.
The current CLI is setup to be more compatible with how Wrangler 1 works, which is not optimal for Wrangler 2.

--- a/.gitignore
+++ b/.gitignore
@@ -174,5 +174,6 @@ dist
 # End of https://www.toptal.com/developers/gitignore/api/node,macos
 
 wrangler-dist/
+miniflare-dist
 packages/wrangler/wrangler.toml
 packages/prerelease-registry/_worker.js
